tui/legacy/src/pager/snapshots/tui__pager__tests__diff_change.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"-old                                             |+new                                              "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"(1/1) source +1, target -1        [            TMPDIR            ]                            h help"
