tui/legacy/src/pager/snapshots/tui__pager__tests__diff_empty.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"(1/1) source +0, target -0        [            TMPDIR            ]                            h help"
