tui/legacy/src/pager/snapshots/tui__pager__tests__diff_insert.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
" keep                                            | keep                                             "
"                                                 |+added                                            "
"                                                 |                                                  "
"                                                 |                                                  "
"(1/1) source +1, target -0        [            TMPDIR            ]                            h help"
