tui/legacy/src/pager/snapshots/tui__pager__tests__explorer_focus_preview.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"[            TMPDIR            ]                 |preview                                           "
"  a.txt                                          |                                                  "
"  b.txt                                          |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"                                                 |                                                  "
"Source (1/1)                      [            TMPDIR            ]                            h help"
