tui/legacy/src/pager/snapshots/tui__pager__tests__view_empty.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"(1/1)                             [            TMPDIR            ]                            h help"
