tui/legacy/src/pager/snapshots/tui__pager__tests__view_overflow_viewport.snap
---
source: tui/src/pager/mod.rs
expression: terminal.backend()
---
"a                                                                                                   "
"b                                                                                                   "
"c                                                                                                   "
"d                                                                                                   "
"(1/5)                             [            TMPDIR            ]                            h help"
